[vuihandler]: Add a TX circular buffer to the BE. Fix an issue in the Injector
The main purpose of this fix is to have a way to queue the TX packets
before sending them in the vuhandler BE. I tis needed as we have
multiple sending sources, which reside both in the ME and the agency. It
was tested with an ME injection from the tablet, but still need to be
tested for the TX way.

--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -4404,7 +4404,7 @@ CONFIG_VUART_BACKEND=y
 # CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
 CONFIG_VWEATHER_BACKEND=y
-# CONFIG_VUIHANDLER_BACKEND is not set
+CONFIG_VUIHANDLER_BACKEND=y
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
 # CONFIG_VNET_BACKEND is not set
