[WAGO] Add wagoled driver
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/agency/linux/arch/arm/boot/dts/soo.dtsi
+++ b/agency/linux/arch/arm/boot/dts/soo.dtsi
@@ -11,7 +11,7 @@
 
 			vdummy {
 				compatible = "vdummy,backend";
-				status = "disabled";
+				status = "ok";
 			};
 	
 			vuihandler {
@@ -43,6 +43,11 @@
             	compatible = "vweather,backend";
             	status = "disabled";
         	};
+
+			vwagoled {
+				compatible = "vwagoled,backend";
+				status = "ok";
+			};
 
 		};
 	};
