--- a/agency/linux/arch/arm/configs/vexpress_defconfig
+++ b/agency/linux/arch/arm/configs/vexpress_defconfig
@@ -3410,6 +3410,7 @@ CONFIG_VUART_BACKEND=y
 # CONFIG_VNET_BACKEND is not set
 # CONFIG_VSENSELED_BACKEND is not set
 # CONFIG_VSENSEJ_BACKEND is not set
+CONFIG_VWAGOLED_BACKEND=y
 
 #
 # vnet backend config
