--- a/agency/linux/soo/drivers/Makefile
+++ b/agency/linux/soo/drivers/Makefile
@@ -15,3 +15,4 @@ obj-$(CONFIG_VFB_BACKEND)  += vfbback/
 obj-$(CONFIG_VNET_BACKEND)  += vnetback/
 obj-$(CONFIG_VSENSELED_BACKEND) += vsenseledback/
 obj-$(CONFIG_VSENSEJ_BACKEND) += vsensejback/
+obj-$(CONFIG_VWAGOLED_BACKEND) += vwagoledback/
