[ENOCEAN] Add enocean driver
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/agency/linux/arch/arm/boot/dts/soo.dtsi
+++ b/agency/linux/arch/arm/boot/dts/soo.dtsi
@@ -49,6 +49,14 @@
 				status = "ok";
 			};
 
+			venocean {
+				compatible = "venocean,backend";
+				status = "ok";
+
+				// SW2-gpios = <&gpio 0 GPIO_ACTIVE_HIGH>;
+				// SW1-gpios = <&gpio 1 GPIO_ACTIVE_HIGH>;
+			};
+
 		};
 	};
 	
