--- a/agency/linux/arch/arm/configs/vexpress_defconfig
+++ b/agency/linux/arch/arm/configs/vexpress_defconfig
@@ -3411,6 +3411,7 @@ CONFIG_VUART_BACKEND=y
 # CONFIG_VSENSELED_BACKEND is not set
 # CONFIG_VSENSEJ_BACKEND is not set
 CONFIG_VWAGOLED_BACKEND=y
+CONFIG_VENOCEAN_BACKEND=y
 
 #
 # vnet backend config
