--- a/agency/linux/soo/drivers/Makefile
+++ b/agency/linux/soo/drivers/Makefile
@@ -16,3 +16,4 @@ obj-$(CONFIG_VNET_BACKEND)  += vnetback/
 obj-$(CONFIG_VSENSELED_BACKEND) += vsenseledback/
 obj-$(CONFIG_VSENSEJ_BACKEND) += vsensejback/
 obj-$(CONFIG_VWAGOLED_BACKEND) += vwagoledback/
+obj-$(CONFIG_VENOCEAN_BACKEND) += venoceanback/
