[ME WAGO] Add SOO.wagoled Mobile Entity
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/ME/base/so3/dts/Makefile
+++ b/ME/base/so3/dts/Makefile
@@ -15,5 +15,6 @@ dtb-$(CONFIG_SOO_BLIND) += blind.dtb
 dtb-$(CONFIG_SOO_AGENCY) += agency.dtb
 dtb-$(CONFIG_SOO_NET) += net.dtb
 dtb-$(CONFIG_SOO_LEDCTRL) += ledctrl.dtb
+dtb-$(CONFIG_SOO_WAGOLED) += wagoled.dtb
 
 
