[ME WAGO] Add enocean and wagoled frontends
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/ME/base/so3/dts/wagoled.dts
+++ b/ME/base/so3/dts/wagoled.dts
@@ -46,6 +46,14 @@ on DALI bus";
 		vuihandler {
 			status = "ok";
 		};
+
+		venocean {
+			status = "ok";
+		};
+
+		vwagoled {
+			status = "ok";
+		};
 	};
 	
 };
