--- a/ME/base/so3/configs/wagoled_defconfig
+++ b/ME/base/so3/configs/wagoled_defconfig
@@ -99,6 +99,8 @@ CONFIG_VUART_FRONTEND=y
 
 # CONFIG_VSENSELED_FRONTEND is not set
 # CONFIG_VSENSEJ_FRONTEND is not set
+CONFIG_VENOCEAN_FRONTEND=y
+CONFIG_VWAGOLED_FRONTEND=y
 # end of SOO Mobile Entity frontend drivers
 # end of SOO Mobile Entity - Smart Object Oriented subsystem
 
