[ME WAGOLED] Add wago led ME plus vwagoled FE
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -102,8 +102,15 @@
             	status = "disabled";
         	};
         	
+			vwagoled {
+				compatible = "vwagoled,frontend";
+				status = "disabled";
+			};
 
-        	
+			venocean {
+				compatible = "venocean,frontend";
+				status = "disabled";
+			};
 		};
 	
 	};
