--- a/ME/base/so3/configs/wagoled_defconfig
+++ b/ME/base/so3/configs/wagoled_defconfig
@@ -15,8 +15,7 @@ CONFIG_CROSS_COMPILE="arm-none-linux-gnueabihf-"
 CONFIG_SO3VIRT=y
 # end of Platform
 
-# CONFIG_THREAD_ENV is not set
-CONFIG_PROC_ENV=y
+CONFIG_THREAD_ENV=y
 
 #
 # SO3 Scheduling configuration
@@ -37,7 +36,7 @@ CONFIG_UART=y
 # CONFIG_DW_APB_UART is not set
 CONFIG_SO3VIRT_SERIAL=y
 # CONFIG_MMC is not set
-CONFIG_RAMDEV=y
+# CONFIG_RAMDEV is not set
 # CONFIG_ARM_TIMER is not set
 # CONFIG_GIC is not set
 CONFIG_VIRQ=y
@@ -56,17 +55,16 @@ CONFIG_KERNEL_VIRT_ADDR=0xc0000000
 #
 # Filesystems
 #
-CONFIG_FS_FAT=y
-# CONFIG_ROOTFS_NONE is not set
+CONFIG_ROOTFS_NONE=y
 # CONFIG_ROOTFS_MMC is not set
-CONFIG_ROOTFS_RAMDEV=y
+# CONFIG_ROOTFS_RAMDEV is not set
 # end of Filesystems
 
 #
 # IPC
 #
-CONFIG_IPC_SIGNAL=y
-CONFIG_IPC_PIPE=y
+# CONFIG_IPC_SIGNAL is not set
+# CONFIG_IPC_PIPE is not set
 # end of IPC
 
 #
@@ -83,7 +81,7 @@ CONFIG_SOO_WAGOLED=y
 #
 # SOO Mobile Entity frontend drivers
 #
-CONFIG_VDUMMY_FRONTEND=y
+# CONFIG_VDUMMY_FRONTEND is not set
 CONFIG_VUART_FRONTEND=y
 # CONFIG_VFB_FRONTEND is not set
 # CONFIG_VINPUT_FRONTEND is not set
