--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -4410,6 +4410,8 @@ CONFIG_VWEATHER_BACKEND=y
 # CONFIG_VNET_BACKEND is not set
 CONFIG_VSENSELED_BACKEND=y
 CONFIG_VSENSEJ_BACKEND=y
+CONFIG_VWAGOLED_BACKEND=y
+CONFIG_VENOCEAN_BACKEND=y
 
 #
 # vnet backend config
