[ENOCEAN] add enocean uart driver
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -396,6 +396,11 @@
 	pinctrl-0 = <&uart5_gpio12>;
 	status = "okay";
 
+	enocean-uart {
+		compatible = "enocean-uart";
+		current-speed = "9600";
+	};
+
 };	
 
 &spi1 {
