--- a/agency/linux/arch/arm/configs/vexpress_defconfig
+++ b/agency/linux/arch/arm/configs/vexpress_defconfig
@@ -1095,6 +1095,7 @@ CONFIG_BT_DEBUGFS=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 # CONFIG_BT_MTKSDIO is not set
+# CONFIG_BT_MTKUART is not set
 # end of Bluetooth device drivers
 
 # CONFIG_AF_RXRPC is not set
@@ -1604,6 +1605,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_CONEXANT_DIGICOLOR is not set
 # CONFIG_SERIAL_ST_ASC is not set
 # CONFIG_SERIAL_SPRD is not set
+CONFIG_ENOCEAN_UART=y
 # end of Serial drivers
 
 # CONFIG_SERIAL_NONSTANDARD is not set
@@ -1611,7 +1613,8 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_NULL_TTY is not set
 # CONFIG_TRACE_SINK is not set
 # CONFIG_HVC_DCC is not set
-# CONFIG_SERIAL_DEV_BUS is not set
+CONFIG_SERIAL_DEV_BUS=y
+CONFIG_SERIAL_DEV_CTRL_TTYPORT=y
 # CONFIG_VIRTIO_CONSOLE is not set
 # CONFIG_IPMI_HANDLER is not set
 CONFIG_HW_RANDOM=y
@@ -2029,6 +2032,7 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_STPMIC1 is not set
 # CONFIG_MFD_STMFX is not set
 CONFIG_MFD_VEXPRESS_SYSREG=y
+# CONFIG_RAVE_SP_CORE is not set
 # end of Multifunction device drivers
 
 CONFIG_REGULATOR=y
