--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -1669,6 +1669,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_CONEXANT_DIGICOLOR is not set
 # CONFIG_SERIAL_ST_ASC is not set
 # CONFIG_SERIAL_SPRD is not set
+CONFIG_ENOCEAN_UART=y
 # end of Serial drivers
 
 CONFIG_SERIAL_MCTRL_GPIO=y
