[ENOCEAN] Uart works from amba
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/agency/linux/arch/arm/boot/dts/vexpress.dts
+++ b/agency/linux/arch/arm/boot/dts/vexpress.dts
@@ -47,19 +47,6 @@
 		i2c1 = &v2m_i2c_pcie;
 	};
 
-	v2m_serial1 {
-		compatible = "enocean,drv";
-		status = "okay";
-		
-		enocean-uart {
-			compatible = "enocean-uart";
-			current-speed = <57600>;
-			status = "okay";
-		};
-	};
-
-
-
 	cpus {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -405,5 +392,15 @@
 		vsensej {
 			status = "ok";
 		};
+	};
+};
+
+&v2m_serial1 {
+	status = "okay";
+		
+	enocean-uart {
+		compatible = "enocean-uart";
+		current-speed = <57600>;
+		status = "okay";
 	};
 };
