folder SOO.ledctrl and modif config vexpress

--- a/agency/linux/arch/arm/configs/vexpress_defconfig
+++ b/agency/linux/arch/arm/configs/vexpress_defconfig
@@ -3408,8 +3408,8 @@ CONFIG_VUART_BACKEND=y
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
 # CONFIG_VNET_BACKEND is not set
-# CONFIG_VSENSELED_BACKEND is not set
-# CONFIG_VSENSEJ_BACKEND is not set
+CONFIG_VSENSELED_BACKEND=y
+CONFIG_VSENSEJ_BACKEND=y
 
 #
 # vnet backend config
