--- a/agency/linux/drivers/tty/serial/Kconfig
+++ b/agency/linux/drivers/tty/serial/Kconfig
@@ -1583,11 +1583,13 @@ config SERIAL_MILBEAUT_USIO_CONSOLE
 	  receives all kernel messages and warnings and which allows logins in
 	  single user mode).
 
-config ENOCEAN_UART
-	bool "Support for uart communication with enocean module"
-	depends on SERIAL_DEV_BUS
+config TCM515_SERDEV
+	bool "Support tmc515 module uart communication from kernel"
+	depends on SERIAL_DEV_CTRL_TTYPORT=y
 	help
-		TODO
+		Create an uart device that uses the serdev framework and allows 
+		to communicate with a TCM515 en0cean module. !Only RX works at 
+		the moment
 
 endmenu
 
