--- a/agency/linux/drivers/tty/serial/Makefile
+++ b/agency/linux/drivers/tty/serial/Makefile
@@ -96,4 +96,4 @@ obj-$(CONFIG_SERIAL_MCTRL_GPIO)	+= serial_mctrl_gpio.o
 
 obj-$(CONFIG_SERIAL_KGDB_NMI) += kgdb_nmi.o
 obj-$(CONFIG_KGDB_SERIAL_CONSOLE) += kgdboc.o
-obj-$(CONFIG_ENOCEAN_UART) += enocean_uart.o
+obj-$(CONFIG_TCM515_SERDEV) += tcm515_serdev.o esp3_protocol.o
