--- a/ME/base/so3/configs/ledctrl_defconfig
+++ b/ME/base/so3/configs/ledctrl_defconfig
@@ -90,7 +90,7 @@ CONFIG_VSENSEJ_FRONTEND=y
 # CONFIG_VINPUT_FRONTEND is not set
 # CONFIG_VDOGA12V6NM_FRONTEND is not set
 #CONFIG_VWEATHER_FRONTEND=y
-CONFIG_VUIHANDLER_FRONTEND=y
+# CONFIG_VUIHANDLER_FRONTEND is not set
 # end of SOO Mobile Entity frontend drivers
 # end of SOO Mobile Entity - Smart Object Oriented subsystem
 
