[TCM515] Corrected write bug, moved to soo folder
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/agency/linux/soo/drivers/Kconfig
+++ b/agency/linux/soo/drivers/Kconfig
@@ -77,6 +77,14 @@ config VWAGOLED_BACKEND
 	help
 	  The vwagoled driver allows to changes the status of the wago leds 
 
+config TCM515_SERDEV
+	bool "Support tmc515 module uart communication from kernel"
+	depends on SERIAL_DEV_CTRL_TTYPORT=y
+	help
+		Create an uart device that uses the serdev framework and allows 
+		to communicate with a TCM515 en0cean module. !Only RX works at 
+		the moment
+
 config VENOCEAN_BACKEND
 	bool "enOcean backend driver"
 	depends on TTY
