--- a/agency/linux/soo/drivers/Makefile
+++ b/agency/linux/soo/drivers/Makefile
@@ -17,4 +17,4 @@ obj-$(CONFIG_VSENSELED_BACKEND) += vsenseledback/
 obj-$(CONFIG_VSENSEJ_BACKEND) += vsensejback/
 obj-$(CONFIG_VWAGOLED_BACKEND) += vwagoledback/
 obj-$(CONFIG_VENOCEAN_BACKEND) += venoceanback/
-obj-$(CONFIG_TCM515_SERDEV) += serial/tcm515/
+obj-$(CONFIG_TCM515) += serial/tcm515/
