--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -4412,7 +4412,7 @@ CONFIG_VWEATHER_BACKEND=y
 CONFIG_VSENSELED_BACKEND=y
 CONFIG_VSENSEJ_BACKEND=y
 CONFIG_VWAGOLED_BACKEND=y
-CONFIG_TCM515_SERDEV=y
+CONFIG_TCM515=y
 CONFIG_VENOCEAN_BACKEND=y
 
 #
