--- a/agency/linux/arch/arm/boot/dts/vexpress.dts
+++ b/agency/linux/arch/arm/boot/dts/vexpress.dts
@@ -392,15 +392,22 @@
 		vsensej {
 			status = "ok";
 		};
+
+		vwagoled {
+			status = "ok";
+		};
+
+		venocean {
+			status = "ok";
+		};
 	};
 };
 
 &v2m_serial1 {
 	status = "okay";
 		
-	enocean-uart {
-		compatible = "enocean-uart";
+	enocean {
+		compatible = "enocean,tcm515";
 		current-speed = <57600>;
-		status = "okay";
 	};
 };
