--- a/ME/base/so3/dts/wagoled.dts
+++ b/ME/base/so3/dts/wagoled.dts
@@ -26,6 +26,9 @@
 	
 	/* SPID on 128-bit encoding */
 	spid = /bits/ 64 <0x0020000000000003>;
+
+	/* SPAD capabilities on 64-bit encoding */
+	spadcaps = /bits/ 64 <0x0000000000000000>;
 		
 	/* Name of this ME */
 	me_name = "SOO.wagoled";
