[WAGOLED] Corrections from merge request comments
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -390,7 +390,7 @@
 	status = "okay";
 };
 
-/* BCU SOO.tech: UART5 used for the enOcean control */
+/* UART5 used for enOcean communication on soo.mp V1 */
 &uart5 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&uart5_gpio12>;
