--- a/ME/base/so3/dts/chat.dts
+++ b/ME/base/so3/dts/chat.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2021 Daniel Rossier <daniel.rossier@heig-vd.ch>
+ * Copyright (C) 2016-2018 Daniel Rossier <daniel.rossier@soo.tech>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -16,27 +16,39 @@
  *
  */
 
-#ifndef XMLUI_H
-#define XMLUI_H
+/dts-v1/;
 
-/*
- * Prepare a XML message.
- * Allocation of the message has to be done by the caller
- */
-void xml_prepare_message(char *buffer, char *id, char *value);
+#include "so3virt.dtsi"
 
-/*
- * Retrieve the action from an XML event message.
- * Allocation of the buffers has to be done by the caller
- */
-void xml_parse_event(char *buffer, char *id, char *action);
+&ME {
+	/* 16 MB should be enough for major cases. */
+	domain-size = <0x1000000>;
+	
+	/* SPID on 64-bit encoding */
+	spid = /bits/ 64 <0x0010000000000004>;
+	
+	/* SPAD capabilities on 64-bit encoding */
+	spadcaps = /bits/ 64 <0x0000000000000000>;
+	
+	/* Name of this ME */
+	me_name = "SOO.chat";
+	
+	/* Short description */
+	me_shortdesc =
+			
+"SOO.chat is a live chat ME to distribute message across the network";
 
+	frontends {
+	
+		/* Enabling the console */
+		vuart {
+			status = "ok";
+		};
 
-/**
- * Retrieve the content of an event 
- * 
- * Allocation of the content buffer has to be done by the caller
- */
-void xml_get_event_content(char *buffer, char *content);
-
-#endif /* XMLUI_H */
+		vuihandler {
+			status = "ok";
+		};
+		
+	};
+};
+			
