--- a/ME/base/so3/soo/kernel/Makefile
+++ b/ME/base/so3/soo/kernel/Makefile
@@ -9,6 +9,7 @@ obj-y	+= evtchn.o
 obj-y	+= gnttab.o
 obj-y   += soo_guest_activity.o
 obj-y   += soo_id.o
+obj-y   += xmlui.o
 obj-y	+= vbus/ vbstore/ console/ debug/ 
 
 # dependencies on generated files need to be listed explicitly
