WiP: first re-organisation of code for aarch64 support

--- a/agency/avz/arch/arm64/Makefile
+++ b/agency/avz/arch/arm64/Makefile
@@ -1,7 +1,5 @@
 
-obj-y += boot/
-
-obj-y += spinlock.o
+obj-y += head.o hyp-stub.o
 
 obj-y += fault.o backtrace.o
 obj-y += backtrace.o backtrace_asm.o
