--- a/agency/avz/lib/Makefile
+++ b/agency/avz/lib/Makefile
@@ -1,7 +1,7 @@
 #
 # Makefile for some libs needed in the kernel.
 #
-lib-y += string.o vsprintf.o ctype.o string_helpers.o find_bit.o
+lib-y += string.o vsprintf.o ctype.o string_helpers.o 
 
 lib-y += domain_utils.o logbool.o image-fit.o
 
