[RN2483] Add first version of LoRa serdev
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/agency/linux/arch/arm/boot/dts/vexpress.dts
+++ b/agency/linux/arch/arm/boot/dts/vexpress.dts
@@ -411,3 +411,12 @@
 		current-speed = <57600>;
 	};
 };
+
+&v2m_serial2 {
+	status = "okay";
+		
+	lora {
+		compatible = "lora,rn2483";
+		current-speed = <57600>;
+	};
+};
