--- a/agency/linux/arch/arm/configs/vexpress_defconfig
+++ b/agency/linux/arch/arm/configs/vexpress_defconfig
@@ -1605,7 +1605,6 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_CONEXANT_DIGICOLOR is not set
 # CONFIG_SERIAL_ST_ASC is not set
 # CONFIG_SERIAL_SPRD is not set
-CONFIG_ENOCEAN_UART=y
 # end of Serial drivers
 
 # CONFIG_SERIAL_NONSTANDARD is not set
@@ -3417,6 +3416,7 @@ CONFIG_VUART_BACKEND=y
 CONFIG_VWAGOLED_BACKEND=y
 CONFIG_TCM515=y
 CONFIG_VENOCEAN_BACKEND=y
+CONFIG_RN2483=y
 
 #
 # vnet backend config
