--- a/agency/linux/soo/drivers/Makefile
+++ b/agency/linux/soo/drivers/Makefile
@@ -18,3 +18,6 @@ obj-$(CONFIG_VSENSEJ_BACKEND) += vsensejback/
 obj-$(CONFIG_VWAGOLED_BACKEND) += vwagoledback/
 obj-$(CONFIG_VENOCEAN_BACKEND) += venoceanback/
 obj-$(CONFIG_TCM515) += serial/tcm515/
+obj-$(CONFIG_RN2483) += serial/rn2483/
+
+
