--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -4414,6 +4414,7 @@ CONFIG_VSENSEJ_BACKEND=y
 CONFIG_VWAGOLED_BACKEND=y
 CONFIG_TCM515=y
 CONFIG_VENOCEAN_BACKEND=y
+CONFIG_RN2483=y
 
 #
 # vnet backend config
