WiP: Secondary CPU #3 booting correctly with timer interrupt

--- a/agency/avz/devices/Kconfig
+++ b/agency/avz/devices/Kconfig
@@ -1,3 +1,11 @@
 
-source "devices/serial/Kconfig"
+menu "Drivers"
 
+config UART
+	bool "Driver UART"
+    
+
+source "devices/serial/Kconfig"
+source "devices/irq/Kconfig"
+
+endmenu
