--- a/agency/avz/arch/Kconfig
+++ b/agency/avz/arch/Kconfig
@@ -10,7 +10,6 @@ choice
 		
 endchoice
 
-
 config ARCH
 	string
 	default "arm32" if ARCH_ARM32
@@ -20,6 +19,9 @@ config CROSS_COMPILE
 	string
 	default "arm-none-linux-gnueabihf-" if ARCH_ARM32
 	default "aarch64-none-linux-gnu-" if ARCH_ARM64
+
+config ARM_TRUSTZONE
+	bool "Using ARM TrustZone with OPTEE-OS"
 
 
 source "arch/arm32/Kconfig"
