--- a/agency/avz/arch/arm32/Makefile
+++ b/agency/avz/arch/arm32/Makefile
@@ -1,4 +1,5 @@
 
+obj-y += head.o hyp-stub.o
 obj-y += setup.o exception.o fault.o hypercalls.o context.o domain.o
 obj-y += cache_v7_asm.o cache_v7.o cache-cp15.o
 obj-y += boot/ 
