--- a/agency/avz/arch/arm64/Makefile
+++ b/agency/avz/arch/arm64/Makefile
@@ -5,9 +5,9 @@ obj-y += fault.o backtrace.o
 obj-y += backtrace.o backtrace_asm.o
 obj-y += setup.o mmu.o cache_v8.o cache.o context.o domain.o
 obj-y += hypercalls.o
-obj-y += exception.o 
+obj-y += exception.o smccc-call.o
 
 obj-y += lib/
 
-#obj-y += $(TARGET)/
+obj-y += $(TARGET)/
 
