--- a/agency/linux/soo/drivers/Kconfig
+++ b/agency/linux/soo/drivers/Kconfig
@@ -92,7 +92,7 @@ config VENOCEAN_BACKEND
 	  This driver enabled to deal with a virtualized interface for the enOcean actuator.
 
 config RN2483
-	bool "Support rn2483 uart communication from kernel"
+	bool "Support rn2483 uart communication from kernel to provide LoRa support"
 	depends on SERIAL_DEV_CTRL_TTYPORT=y
 	help
 		Create an uart device that uses the serdev framework and allows 
