--- a/ME/base/so3/devices/serial/Kconfig
+++ b/ME/base/so3/devices/serial/Kconfig
@@ -17,4 +17,7 @@ config SO3VIRT_SERIAL
 	bool "SO3VIRT serial driver (rely on vuart frontend)"
 	depends on SO3VIRT
 	
+config UART_LL_PADDR
+	hex "Low-level UART base physical address"
+
 	
