[KBERRY838] Add kberry uart driver
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -395,9 +395,14 @@
 	pinctrl-0 = <&uart3_gpio4>;
 	status = "okay";
 
-	lora {
-		compatible = "lora,rn2483";
-		current-speed = <57600>;
+	// lora {
+	// 	compatible = "lora,rn2483";
+	// 	current-speed = <57600>;
+	// };
+	
+	knx {
+		compatible = "knx,kberry838";
+		current-speed = <19200>;
 	};
 };
 
