--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -4415,6 +4415,7 @@ CONFIG_VWAGOLED_BACKEND=y
 CONFIG_TCM515=y
 CONFIG_VENOCEAN_BACKEND=y
 CONFIG_RN2483=y
+CONFIG_KBERRY838=y
 
 #
 # vnet backend config
