--- a/agency/linux/soo/drivers/Kconfig
+++ b/agency/linux/soo/drivers/Kconfig
@@ -97,6 +97,13 @@ config RN2483
 	help
 		Create an uart device that uses the serdev framework and allows 
 		to communicate with a RN2483 LoRa module.
+
+config KBERRY838
+	bool "Support kberry838 uart communication from kernel to provide KNX support"
+	depends on SERIAL_DEV_CTRL_TTYPORT=y
+	help
+		Create an uart device that uses the serdev framework and allows 
+		to communicate with a kberry838 KNX module.
 	  
 source "soo/drivers/vnetback/Kconfig"
 
