--- a/agency/linux/soo/drivers/Makefile
+++ b/agency/linux/soo/drivers/Makefile
@@ -19,3 +19,4 @@ obj-$(CONFIG_VWAGOLED_BACKEND) += vwagoledback/
 obj-$(CONFIG_VENOCEAN_BACKEND) += venoceanback/
 obj-$(CONFIG_TCM515) += serial/tcm515/
 obj-$(CONFIG_RN2483) += serial/rn2483/
+obj-$(CONFIG_KBERRY838) += serial/kberry838/
