--- a/agency/avz/arch/arm64/Makefile
+++ b/agency/avz/arch/arm64/Makefile
@@ -1,7 +1,7 @@
 
 obj-y += head.o hyp-stub.o
 
-obj-y += fault.o backtrace.o
+obj-y += fault.o backtrace.o traps.o
 obj-y += backtrace.o backtrace_asm.o
 obj-y += setup.o mmu.o cache_v8.o cache.o context.o domain.o
 obj-y += hypercalls.o
