[VKNX] Add vknx backend
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -4416,6 +4416,7 @@ CONFIG_TCM515=y
 CONFIG_VENOCEAN_BACKEND=y
 CONFIG_RN2483=y
 CONFIG_KBERRY838=y
+CONFIG_VKNX_BACKEND=y
 
 #
 # vnet backend config
