--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -111,6 +111,11 @@
 				compatible = "venocean,frontend";
 				status = "disabled";
 			};
+
+			vknx {
+				compatible = "vknx,frontend";
+				status = "disabled";
+			};
 		};
 
 	};
