--- a/ME/base/so3/soo/drivers/Kconfig
+++ b/ME/base/so3/soo/drivers/Kconfig
@@ -42,5 +42,8 @@ config VENOCEAN_FRONTEND
 config VWAGOLED_FRONTEND
     bool "Wagoled frontend"
 
+config VKNX_FRONTEND
+    bool "KNX frontend"
+
 endmenu
 
