WiP: ME migrating (but failed at restoring)

--- a/agency/linux/arch/arm64/configs/virt64_defconfig
+++ b/agency/linux/arch/arm64/configs/virt64_defconfig
@@ -357,7 +357,7 @@ CONFIG_ARM64_PA_BITS=48
 CONFIG_CPU_LITTLE_ENDIAN=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
-CONFIG_NR_CPUS=4
+CONFIG_NR_CPUS=2
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_NUMA is not set
 CONFIG_HOLES_IN_ZONE=y
@@ -528,6 +528,18 @@ CONFIG_ARM_SCPI_CPUFREQ=y
 # end of CPU Frequency scaling
 # end of CPU Power Management
 
+CONFIG_XENOMAI=y
+
+#
+# Sizes and static limits
+#
+CONFIG_XENO_OPT_REGISTRY_NRSLOTS=512
+CONFIG_XENO_OPT_SYS_HEAPSZ=512
+# end of Sizes and static limits
+
+CONFIG_IPIPE_WANT_ACTIVE_MM=y
+CONFIG_XENO_ARCH_WANT_TIP=y
+CONFIG_XENO_ARCH_OUTOFLINE_XNLOCK=y
 CONFIG_IPIPE=y
 CONFIG_IPIPE_CORE=y
 
@@ -769,24 +781,11 @@ CONFIG_ARCH_USE_QUEUED_RWLOCKS=y
 CONFIG_QUEUED_RWLOCKS=y
 CONFIG_ARCH_HAS_NON_OVERLAPPING_ADDRESS_SPACE=y
 CONFIG_ARCH_HAS_SYSCALL_WRAPPER=y
-CONFIG_XENOMAI=y
-
-#
-# Core features
-#
-CONFIG_XENO_OPT_TIMER_LIST=y
-# end of Core features
 
 #
 # Sizes and static limits
 #
-CONFIG_XENO_OPT_REGISTRY_NRSLOTS=512
-CONFIG_XENO_OPT_SYS_HEAPSZ=512
 # end of Sizes and static limits
-
-CONFIG_IPIPE_WANT_ACTIVE_MM=y
-CONFIG_XENO_ARCH_WANT_TIP=y
-CONFIG_XENO_ARCH_OUTOFLINE_XNLOCK=y
 
 #
 # Executable file formats
@@ -1029,7 +1028,7 @@ CONFIG_MAC80211_STA_HASH_MAX_SIZE=0
 # CONFIG_RFKILL is not set
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
-# CONFIG_NET_9P_DEBUG is not set
+CONFIG_NET_9P_DEBUG=y
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
@@ -1766,6 +1765,9 @@ CONFIG_SERIO_LIBPS2=y
 #
 # Character devices
 #
+# CONFIG_BRCM_CHAR_DRIVERS is not set
+CONFIG_BCM2835_DEVGPIOMEM=m
+# CONFIG_RPIVID_MEM is not set
 CONFIG_TTY=y
 CONFIG_VT=y
 CONFIG_CONSOLE_TRANSLATIONS=y
@@ -2073,6 +2075,7 @@ CONFIG_GPIO_PCA953X_IRQ=y
 # MFD GPIO expanders
 #
 # CONFIG_GPIO_BD9571MWV is not set
+# CONFIG_GPIO_FSM is not set
 CONFIG_GPIO_MAX77620=y
 # end of MFD GPIO expanders
 
@@ -2353,6 +2356,7 @@ CONFIG_BCMA_POSSIBLE=y
 # Multifunction device drivers
 #
 CONFIG_MFD_CORE=y
+# CONFIG_MFD_RPISENSE_CORE is not set
 # CONFIG_MFD_ACT8945A is not set
 # CONFIG_MFD_AS3711 is not set
 # CONFIG_MFD_AS3722 is not set
@@ -2410,7 +2414,6 @@ CONFIG_MFD_RK808=y
 # CONFIG_MFD_RN5T618 is not set
 CONFIG_MFD_SEC_CORE=y
 # CONFIG_MFD_SI476X_CORE is not set
-# CONFIG_MFD_SL28CPLD is not set
 # CONFIG_MFD_SM501 is not set
 # CONFIG_MFD_SKY81452 is not set
 # CONFIG_ABX500_CORE is not set
@@ -2566,6 +2569,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_SIMPLE is not set
 # CONFIG_FB_SSD1307 is not set
+# CONFIG_FB_RPISENSE is not set
 # end of Frame buffer Devices
 
 #
@@ -2741,6 +2745,7 @@ CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_OHCI_HCD_PLATFORM=y
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
+# CONFIG_USB_DWCOTG is not set
 # CONFIG_USB_HCD_TEST_MODE is not set
 
 #
@@ -3060,8 +3065,6 @@ CONFIG_PL330_DMA=y
 # CONFIG_XILINX_DMA is not set
 # CONFIG_XILINX_ZYNQMP_DMA is not set
 # CONFIG_XILINX_ZYNQMP_DPDMA is not set
-# CONFIG_XILINX_FRMBUF is not set
-# CONFIG_XILINX_PS_PCIE_DMA is not set
 CONFIG_QCOM_HIDMA_MGMT=y
 CONFIG_QCOM_HIDMA=y
 # CONFIG_DW_DMAC is not set
@@ -3810,6 +3813,7 @@ CONFIG_RAS=y
 CONFIG_NVMEM=y
 CONFIG_NVMEM_SYSFS=y
 # CONFIG_NVMEM_SPMI_SDAM is not set
+# CONFIG_NVMEM_RMEM is not set
 
 #
 # HW tracing support
@@ -4261,7 +4265,7 @@ CONFIG_CRYPTO_AES=y
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_LZO is not set
 # CONFIG_CRYPTO_842 is not set
-# CONFIG_CRYPTO_LZ4 is not set
+CONFIG_CRYPTO_LZ4=y
 # CONFIG_CRYPTO_LZ4HC is not set
 # CONFIG_CRYPTO_ZSTD is not set
 
@@ -4358,6 +4362,7 @@ CONFIG_AUDIT_COMPAT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 CONFIG_ZSTD_DECOMPRESS=y
 CONFIG_XZ_DEC=y
@@ -4679,6 +4684,7 @@ CONFIG_MEMTEST=y
 # SOO Framework and subsystems
 #
 # CONFIG_SOO_RT_APP is not set
+CONFIG_DCM_LZ4=y
 
 #
 # Soolink plugins
@@ -4695,34 +4701,18 @@ CONFIG_SOOLINK_PLUGIN_ETHERNET=y
 CONFIG_VDUMMY_BACKEND=y
 CONFIG_VUART_BACKEND=y
 # CONFIG_VINPUT_BACKEND is not set
+# CONFIG_VDOGA12V6NM_BACKEND is not set
+# CONFIG_VWEATHER_BACKEND is not set
 # CONFIG_VUIHANDLER_BACKEND is not set
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
 # CONFIG_VNET_BACKEND is not set
+# CONFIG_VSENSELED_BACKEND is not set
+# CONFIG_VSENSEJ_BACKEND is not set
 
 #
 # vnet backend config
 #
 # end of vnet backend config
-
-CONFIG_VUART_FRONTEND=y
-CONFIG_VDUMMY_FRONTEND=y
 # end of Smart Object Oriented subsystem
 # end of SOO Framework and subsystems
-
-#
-# OpenCN (AMP) Framework
-#
-CONFIG_RTDM_HZ=250
-# CONFIG_OPENCN_RTS_TOGGLE is not set
-CONFIG_OPENCN_ETHERCAT_MASTER=y
-CONFIG_OPENCN_ETHERCAT_MASTER_NR=1
-CONFIG_OPENCN_ETHERCAT_MASTER_MAC0=""
-CONFIG_OPENCN_ETHERCAT_MASTER_DEBUG_LEVEL=0
-CONFIG_OPENCN_ETHERCAT_MASTER_MASTER_THREAD_PRIORITY=50
-CONFIG_OPENCN_ETHERCAT_MASTER_EOE_THREAD_PRIORITY=50
-CONFIG_OPENCN_ETHERCAT_MASTER_EOE_THREAD_PERIOD_NS=1000000
-# CONFIG_OPENCN_BECKHOFF_APP is not set
-# CONFIG_OPENCN_OPENBLAS is not set
-# CONFIG_VDUMMY_RING is not set
-# end of OpenCN (AMP) Framework
