--- a/agency/linux/soo/kernel/debug/Makefile
+++ b/agency/linux/soo/kernel/debug/Makefile
@@ -1,6 +1,8 @@
 
 obj-y += gpio.o time.o dbgvar.o meminfo.o logbool.o dbglib.o dbgvar.o
 obj-y	+= bandwidth.o 
+obj-y	+= debug.o
+
 obj-$(CONFIG_ARM) += bandwidth_neon.o
 
 ifeq ($(CONFIG_ARM),y)
