--- a/agency/linux/soo/drivers/Kconfig
+++ b/agency/linux/soo/drivers/Kconfig
@@ -78,7 +78,7 @@ config VWAGOLED_BACKEND
 	  The vwagoled driver allows to changes the status of the wago leds 
 
 config TCM515
-	bool "Support tmc515 uart communication from kernel"
+	bool "Support tmc515 uart communication from kernel to provide EnOcean support"
 	depends on SERIAL_DEV_CTRL_TTYPORT=y
 	help
 		Create an uart device that uses the serdev framework and allows 
